--- a/CoupleMoney/.settings/org.eclipse.wst.common.component
+++ b/CoupleMoney/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources-local"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources-dev"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources-release"/>
 		<property name="java-output-path" value="target/classes"/>
         <property name="context-root" value="spring"/>
 	</wb-module>
