--- a/CoupleMoney/src/main/webapp/WEB-INF/templates/login.html
+++ b/CoupleMoney/src/main/webapp/WEB-INF/templates/login.html
@@ -5,37 +5,46 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Hello World!!</title>
+<title>login</title>
 <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.4/dist/css/bootstrap.min.css}">
+<link rel="stylesheet" th:href="@{/resources/css/login.css}">
+<script th:src="@{/webjars/jquery/2.1.3/dist/jquery.min.js}"></script>
 </head>
-<body role="document">
-	<div class="container theme-showcase" role="main">
-		<p>
-			<button type="button" class="btn btn-lg btn-default" onClick="getAuthorizationUrl('daum')">DAUM</button>
-			<button type="button" class="btn btn-lg btn-primary" onClick="getAuthorizationUrl('kakao')">KAKAO</button>
-			<button type="button" class="btn btn-lg btn-success" onClick="getAuthorizationUrl('naver')">NAVER</button>
-			<button type="button" class="btn btn-lg btn-info" onClick="getAuthorizationUrl('google')">GOOGLE</button>
-			<button type="button" class="btn btn-lg btn-warning" onClick="getAuthorizationUrl('twitter')">TWITTER</button>
-			<button type="button" class="btn btn-lg btn-danger">Danger</button>
-			<button type="button" class="btn btn-lg btn-link">Link</button>
-		</p>
-	</div> <!-- /container -->
-	
-	<script th:src="@{/webjars/jquery/2.1.3/dist/jquery.min.js}"></script>
-	<script th:src="@{/webjars/bootstrap/3.3.4/dist/js/bootstrap.min.js}"></script>
-	<script type="text/javascript">
-	function getAuthorizationUrl(socialType) {
-		$.ajax({
-			url: "/social/oauth/" + socialType,
-			type: 'GET',
-			dataType: 'json',
-			success: function(result) {
-				window.location.href = result.url;
-			}, fail: function(result) {
-				console.log(result);
-			}
+<body>
+	<div class="wrapper">
+		<div class="container">
+			<h1>Welcome</h1>
+			
+			<form class="form">
+				<input type="text" placeholder="Username">
+				<input type="password" placeholder="Password">
+				<button type="submit" id="login-button">Login</button>
+				<img th:src="@{/resources/images/bt_icon.png}" />
+			</form>
+		</div>
+		
+		<ul class="bg-bubbles">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
+	<script src="//assets.codepen.io/assets/common/stopExecutionOnTimeout.js?t=1"></script>
+	<script>
+		$(document).ready(function() {
+			$("#login-button").click(function(event) {
+				event.preventDefault();
+				$('form').fadeOut(500);
+				$('.wrapper').addClass('form-success');
+			});
 		});
-	}
 	</script>
 </body>
 </html>
