--- a/CoupleMoney/src/main/webapp/WEB-INF/templates/login.html
+++ b/CoupleMoney/src/main/webapp/WEB-INF/templates/login.html
@@ -55,6 +55,7 @@
 	});
 		
 	function getAuthorizationUrl(socialType) {
+		alert('asdf');
 		$.ajax({
 			url: "/social/oauth/" + socialType,
 			type: 'GET',
@@ -66,8 +67,6 @@
 			}
 		});
 	}
-	</script>
-		
 	</script>
 </body>
 </html>
