--- a/CoupleMoney/src/main/webapp/WEB-INF/templates/home.html
+++ b/CoupleMoney/src/main/webapp/WEB-INF/templates/home.html
@@ -33,7 +33,7 @@
 		<div class="col-md-3 left_col">
 			<div class="left_col scroll-view">
 			<div class="navbar nav_title" style="border: 0;">
-				<a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentellela Alela!</span></a>
+				<a th:href="@{/}" class="site_title"><i class="fa fa-paw"></i> <span>Gentellela Alela!</span></a>
 			</div>
 
 			<div class="clearfix"></div>
@@ -41,11 +41,11 @@
 			<!-- menu profile quick info -->
 			<div class="profile">
 				<div class="profile_pic">
-				<img src="" alt="" class="img-circle profile_img" style="width: 57px; height: 57px;" />
+				<img th:src="${session.user.profileImage}" alt="profile_image" class="img-circle profile_img" style="width: 57px; height: 57px;" />
 				</div>
 				<div class="profile_info">
 				<span>Welcome,</span>
-				<h2>John Doe</h2>
+				<h2 th:text="${session.user.name}">John Doe</h2>
 				</div>
 			</div>
 			<!-- /menu profile quick info -->
@@ -86,7 +86,7 @@
 				<ul class="nav navbar-nav navbar-right">
 				<li class="">
 					<a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-					<img src="images/img.jpg" alt="">John Doe
+					<img th:src="${session.user.profileImage}" alt="profile_image" />John Doe
 					<span class=" fa fa-angle-down"></span>
 					</a>
 					<ul class="dropdown-menu dropdown-usermenu pull-right">
