--- a/CoupleMoney/src/main/webapp/WEB-INF/templates/home.html
+++ b/CoupleMoney/src/main/webapp/WEB-INF/templates/home.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Gentellela Alela! | </title>
+	<title>커플 가계부 | </title>
 
 	<!-- Bootstrap -->
 	<link th:href="@{/resources/theme/vendors/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet">
@@ -33,7 +33,7 @@
 		<div class="col-md-3 left_col">
 			<div class="left_col scroll-view">
 			<div class="navbar nav_title" style="border: 0;">
-				<a th:href="@{/}" class="site_title"><i class="fa fa-paw"></i> <span>Gentellela Alela!</span></a>
+				<a th:href="@{/}" class="site_title"><i class="fa fa-paw"></i> <span>커플 가계부!</span></a>
 			</div>
 
 			<div class="clearfix"></div>
@@ -59,16 +59,16 @@
 			<!-- /menu footer buttons -->
 			<div class="sidebar-footer hidden-small">
 				<a data-toggle="tooltip" data-placement="top" title="Settings">
-				<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+					<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
 				</a>
 				<a data-toggle="tooltip" data-placement="top" title="FullScreen">
-				<span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+					<span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
 				</a>
 				<a data-toggle="tooltip" data-placement="top" title="Lock">
-				<span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+					<span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
 				</a>
-				<a data-toggle="tooltip" data-placement="top" title="Logout">
-				<span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+				<a data-toggle="tooltip" data-placement="top" title="Logout" th:href="@{/logout}">
+					<span class="glyphicon glyphicon-off" aria-hidden="true"></span>
 				</a>
 			</div>
 			<!-- /menu footer buttons -->
@@ -86,7 +86,7 @@
 				<ul class="nav navbar-nav navbar-right">
 				<li class="">
 					<a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-					<img th:src="${session.user.profileImage}" alt="profile_image" />John Doe
+					<img th:src="${session.user.profileImage}" alt="profile_image" /> <span th:text="${session.user.name}">John Doe</span>
 					<span class=" fa fa-angle-down"></span>
 					</a>
 					<ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -510,7 +510,7 @@
 						<li><i class="fa fa-bar-chart"></i><a href="#">Auto Renewal</a> </li>
 						<li><i class="fa fa-line-chart"></i><a href="#">Achievements</a>
 						</li>
-						<li><i class="fa fa-area-chart"></i><a href="#">Logout</a>
+						<li><i class="fa fa-area-chart"></i><a th:href="@{/logout}">Logout</a>
 						</li>
 					</ul>
 
