카카오톡 로그인 추가

--- a/CoupleMoney/src/main/webapp/WEB-INF/templates/login.html
+++ b/CoupleMoney/src/main/webapp/WEB-INF/templates/login.html
@@ -20,6 +20,7 @@
 				<img th:src="@{/resources/images/btn_login_naver.png}" onClick="getAuthorizationUrl('naver')" alt="naver login"/>
 				<img th:src="@{/resources/images/btn_login_google.png}" onClick="getAuthorizationUrl('google')" alt="google login"/>
 				<img th:src="@{/resources/images/btn_login_twitter.png}" onClick="getAuthorizationUrl('twitter')" alt="twitter login"/>
+				<img th:src="@{/resources/images/btn_login_kakao.png}" onClick="getAuthorizationUrl('kakao')" alt="kakao login"/>
 				<input type="text" placeholder="Username">
 				<input type="password" placeholder="Password">
 				<button type="submit" id="login-button">Login</button>
